Fix cycle in order service and customer service. Fix DefaultCategoryService.save()