@@ -4,14 +4,18 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
+import ru.ssau.webcaffe.entity.Weight;
+import ru.ssau.webcaffe.entity.WeightType;
 import ru.ssau.webcaffe.pojo.*;
 import ru.ssau.webcaffe.repo.AddressRepository;
 import ru.ssau.webcaffe.repo.CustomerRepository;
 import ru.ssau.webcaffe.service.*;
 
+import java.math.BigDecimal;
 import java.security.Principal;
 import java.time.LocalDateTime;
 import java.util.Collections;
+import java.util.Set;
 
 
 @SpringBootApplication
@@ -28,6 +32,8 @@ public class WebcaffeApplication implements CommandLineRunner {
 
     private final DefaultPromotionService promotionService;
 
+    private final DefaultCategoryService categoryService;
+
     private final UserService userService;
 
     @Autowired
@@ -35,6 +41,7 @@ public class WebcaffeApplication implements CommandLineRunner {
 
     @Autowired
     private CustomerRepository customerRepository;
+
     public WebcaffeApplication(
             AddressService addressService,
             DefaultCustomerService customerService,
@@ -42,15 +49,20 @@ public class WebcaffeApplication implements CommandLineRunner {
             DefaultProductService productService,
             DefaultProductTypeService productTypeService,
             DefaultPromotionService promotionService,
-            UserService userService
-    ) {
+            DefaultCategoryService categoryService,
+            UserService userService,
+            AddressRepository addressRepository,
+            CustomerRepository customerRepository) {
         this.addressService = addressService;
         this.customerService = customerService;
         this.orderService = orderService;
         this.productService = productService;
         this.productTypeService = productTypeService;
         this.promotionService = promotionService;
+        this.categoryService = categoryService;
         this.userService = userService;
+        this.addressRepository = addressRepository;
+        this.customerRepository = customerRepository;
     }
 
     public static void main(String[] args) {
@@ -78,12 +90,16 @@ public class WebcaffeApplication implements CommandLineRunner {
 //                        new OrderPojo(0, LocalDateTime.now(), null, "Перемога", Collections.emptySet()),
 //                        new OrderPojo(1, LocalDateTime.now(), null, "Зрада", Collections.emptySet())
 //                )
-//        );
-
-        customerService.addOrdersByUserId(2,
-                new OrderPojo(0, LocalDateTime.now(), null, "Хай", Collections.emptySet())
-        );
-
+//            );
+        var productTypes = Set.of(
+                new ProductTypePojo(0, new Weight(1, WeightType.KG), new BigDecimal(12.4), "AA"),
+                new ProductTypePojo(1, new Weight(1, WeightType.KG), new BigDecimal(12.4), "AA"));
+        categoryService.save(new CategoryPojo(
+                0,
+                "Второе",
+                "Блюдо второе",
+                Set.of(new ProductPojo(0, "AA", productTypes))
+        ));
 //        customerService.save(2, CustomerPojo.builder()
 //                .addressPojos(Set.of(new AddressPojo(0, "Самара", "Ново-Салова", 12  )))
 //                .name("Марат")
